--- a/index.html
+++ b/index.html
@@ -1,16 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Э... ну типа сайт...</title>
+	<title>Хз вообще</title>
     <div style="padding-top: 0px";>
-        <h1><font color="ffffff">Ура обнова на сайте</font></h1>
+        <h1><font color="ffffff">скоро</font></h1>
     </div>
-	<figure>
-	<figcaption><font color="ffffff">Соло поровну mzlff</font></figcaption>
-        <audio controls src="/music/Solo_porovnu_mzlff.mp3"></audio>
-	<a href="/music/Solo_porovnu_mzlff.mp3">Скачать</a>
-	</figure>
 </head>
 <body style="background-color: rgb(0, 0, 0);">
 </body>
 </html>
+
