Fix HTML formatting and structure

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <li><a href="#">ссылка4</a></li>
           <li><a href="#">ссылка3</a></li>
           <li><a href="#">ссылка2</a></li>
-          <li><a href="about-me.html">Обо мне</a></li>
+          <li><a href="about-me">Обо мне</a></li>
         </ul>
       </nav>
     </div>
@@ -78,4 +78,5 @@
 
 </body>
 </html>
+
 
