Fix HTML formatting and structure

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <!-- Шапка сайта -->
   <header class="header">
     <div class="container header-inner">
-        <a href="index.html" class="brand">
+        <a href="index" class="brand">
           <img src="logo\logo.png" alt="logo" class="logo-center site-icon">
           <span class="brand-text">dk at all</span>
         </a>
@@ -78,5 +78,6 @@
 
 </body>
 </html>
+
 
 
