--- a/index.html
+++ b/index.html
@@ -16,14 +16,13 @@
           <img src="logo\logo.png" alt="logo" class="logo-center site-icon">
           <span class="brand-text">dk at all</span>
         </a>
-      <button class="nav-toggle" aria-label="Открыть меню" aria-expanded="false">☰</button>
       <nav class="primary-nav" aria-label="Главная навигация">
         <ul>
           <li><a href="#">ссылка6</a></li>
           <li><a href="#">ссылка5</a></li>
           <li><a href="#">ссылка4</a></li>
           <li><a href="#">ссылка3</a></li>
-          <li><a href="#">ссылка2</a></li>
+          <li><a href="https://t.me/dkatall">Телеграм канал</a></li>
           <li><a href="about-me">Обо мне</a></li>
         </ul>
       </nav>
@@ -78,6 +77,7 @@
 
 </body>
 </html>
+
 
 
 
