Revise personal info and add device specifications
Updated personal information and device details.

--- a/about-me.html
+++ b/about-me.html
@@ -33,13 +33,15 @@
   <main class="container">
     <h2 class="page-title" id="grid-title">Информация обо мне:</h2>
     <p class="page-subtitle2">Я - Максим. На момент написания этого текста мне 14 лет.<br>
-                              Я увлекаюсь программированием и гитарой.<br>
-                              Хз зачем тебе эта информация, но мне нужно наполнить эту страницу чем-то, поэтому вот мои девайсы на 13.12.2025:
-                              Компьютер - <a class="link"href>характеристики</a></p>
+                              Я увлекаюсь программированием и гитарой.<br> <br>
+                              Мне нужно наполнить эту страницу чем-то, поэтому вот мои девайсы на 13.12.2025:
+                              Телефон:<br>ZTE Blade V50 Design;<br> <br>
+                              Компьютер:<br>Ryzen 5 2600,<br>
+                              GeForce GTX 1060 6 GB,<br>
+                              RAM 16 GB;<br> <br>
+                              Монитор:<br>нету, телевизор использую вместо него;<br> <br>
+                              и где-то лежит планшет:<br>Lenovo Tab M10 Plus 3rd Gen.</p>
   </main>
 
 </body>
 </html>
-
-
-
