--- a/about-me.html
+++ b/about-me.html
@@ -22,7 +22,7 @@
           <li><a href="#">ссылка5</a></li>
           <li><a href="#">ссылка4</a></li>
           <li><a href="#">ссылка3</a></li>
-          <li><a href="https://t.me/dkatall">Телеграм канал</a></li>
+          <li><a href="https://t.me/s/dkatall">Телеграм канал</a></li>
           <li><a href="about-me">Обо мне</a></li>
         </ul>
       </nav>
@@ -45,3 +45,4 @@
 
 </body>
 </html>
+
